<resources>
    <string name="app_name">Easy Repeater</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_word">Добавить слово</string>
    <string name="hint_word">Word...</string>
    <string name="button_save">Save</string>
    <string name="id">ID</string>
    <string name="word">Phrase</string>
    <string name="translate">translate</string>
    <string name="translat">Translate...</string>
    <string name="edit_phrase">edit phrase</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="webview">webview</string>
    <string name="oldBandMaintain">Поддержка старых часов</string>
    <string name="testNotif">testNotif</string>
    <string name="countLoop">Количество повторов</string>
    <string name="time_repeat">Интервал повторений</string>
    <string name="descriptionTimeRepeat">Устанавливает время через которое появиться фраза</string>
    <string name="descriptionTimeRepeatTitle">Введите колличество минут (от 15 до )</string>
    <string name="countLoopDescr">Устанавливает количество фраз</string>
    <string name="countLoopDescrTitle">Введите количество фраз для изучения</string>
    <string name="time_repeat_code">Интервал повторений равен:</string>
    <string name="time_repeat_code_not">Время не установлено</string>
    <string name="count_repeat_code_not">Количество не установлено</string>
    <string name="count_repeat_code">"Количество повторений равно: "</string>
    <string name="text_notif">Это приложение понемногу делает тебя гением</string>
    <string name="title_notif">Easy Repeater</string>
    <string name="sync">Загрузить</string>
    <string name="download_to_base">Сохранить</string>
    <string name="startsAlarms">Запустили алармы</string>
    <string name="stopAlarms">Останавилваем алармы</string>
    <string name="ForegroundServiceChannel">Foreground Service Channel</string>
</resources>