<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        app:key="time_loop"
        app:title="@string/time_repeat">

        <EditTextPreference
            app:key="time_repeat"
            app:title="@string/time_repeat"
            app:summary="@string/descriptionTimeRepeat"
            app:defaultValue="20"
            app:dialogTitle="@string/descriptionTimeRepeatTitle" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="countLoopCategory"
        app:title="@string/countLoop">

        <EditTextPreference
            app:key="countLoop"
            app:title="@string/countLoop"
            app:summary="@string/countLoopDescr"
            app:defaultValue="40"
            app:dialogTitle="@string/countLoopDescrTitle" />

    </PreferenceCategory>
    <PreferenceCategory
        app:key="notifications_category"
        app:title="Notifications">

        <SwitchPreferenceCompat
            app:key="oldBandMaintain"
            app:title="@string/oldBandMaintain"/>

    </PreferenceCategory>

</PreferenceScreen>